syntax = "proto3";

package yandex.cloud.priv.schemaregistry.v1;

import "google/protobuf/timestamp.proto";
import "cloud/dataplatform/api/schemaregistry/schema.proto";
import "cloud/dataplatform/api/schemaregistry/options/options.proto";

option go_package = "a.yandex-team.ru/cloud/dataplatform/api/schemaregistry";

message Namespace {
    option (yandex.cloud.priv.schemaregistry.v1.options.schemaregistry).enabled = true;

    string id = 1;
    Schema.Format format = 2;
    Schema.Compatibility Compatibility = 3;
    string description = 4;
    string folder_id = 5;
    string author = 6;
    google.protobuf.Timestamp created_at = 7;
    google.protobuf.Timestamp updated_at = 8;
}
